--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.31.3",
     "react-responsive": "^10.0.0",
     "tailwindcss": "^4.0.4",
     "three": "^0.173.0"
